# game-of_life-cpp

./: CMakeLists.txt  README.md  main.cpp
